missing files added

--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,7 @@ buildscript {
     maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
   }
   dependencies {
-
-
+    classpath 'com.android.tools.build:gradle:7.4.2'
   }
 }
 
@@ -71,3 +70,17 @@ subprojects {
 }
 
 eclipse.project.name = 'PokeMeetup' + '-parent'
+project(":android") {
+  apply plugin: "com.android.application"
+
+  configurations { natives }
+
+  dependencies {
+    implementation project(":core")
+    implementation "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
+    natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
+  }
+}
