--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.daemon=false
+org.gradle.daemon=true
 org.gradle.jvmargs=-Xms512M -Xmx1G -Dfile.encoding=UTF-8 -Dconsole.encoding=UTF-8
 org.gradle.configureondemand=false
 aiVersion=1.8.2
@@ -10,3 +10,5 @@ enableGraalNative=false
 gdxVersion=1.13.0
 projectVersion=1.0.0
 headless=true
+android.useAndroidX=true
+android.enableJetifier=true
