changes to crafting system

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,12 @@
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-eclipse.project.name = appName + '-core'
+plugins {
+  id 'java-library'
+}
+
+java {
+  sourceCompatibility = JavaVersion.VERSION_1_8
+  targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 
 dependencies {
   api "com.badlogicgames.ashley:ashley:$ashleyVersion"
