--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -5,21 +5,27 @@
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <!-- OpenGL ES 2.0 -->
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
+    <!-- Allows installation on devices without touch screens -->
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
 
     <application
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/GdxTheme">
+            android:theme="@style/GdxTheme"
+            android:hardwareAccelerated="true">
 
         <activity
                 android:name="io.github.pokemeetup.android.AndroidLauncher"
                 android:label="@string/app_name"
                 android:screenOrientation="landscape"
-                android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout">
+                android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
