--- a/assets/Data/biomes.json
+++ b/assets/Data/biomes.json
@@ -1,135 +1,424 @@
-[
-  {
-    "name": "Plains",
-    "type": "PLAINS",
-    "allowedTileTypes": [1, 10, 18, 19, 20, 21, 22, 23, 24],
-    "tileDistribution": {
-      "1": 60.0,
-      "10": 20.0,
-      "18": 3.0,
-      "19": 3.0,
-      "20": 4.0,
-      "21": 4.0,
-      "22": 3.0,
-      "23": 2.0,
-      "24": 1.0
+{
+  "biomes": [
+    {
+      "name": "Plains",
+      "type": "PLAINS",
+      "weight": 1.0,
+      "allowedTileTypes": [
+        "plains_grass_0_0",
+        "plains_grass_0_1",
+        "plains_grass_0_2",
+        "plains_flowers_0_0",
+        "plains_flowers_0_1",
+        "plains_ground_0_0",
+        "plains_ground_0_1",
+        "plains_water_0",
+        "plains_ground_decorated_0_0",
+        "plains_tree_0_0",
+        "plains_tree_1_0",
+        "plains_rock_0_0",
+        "plains_rock_1_0",
+        "plains_bridge_0_0",
+        "plains_bridge_0_1",
+        "plains_fence_0_0",
+        "plains_decoration_0_0"
+      ],
+      "tileDistribution": {
+        "plains_grass_0_0": 35,
+        "plains_flowers_0_0": 15,
+        "plains_ground_0_0": 20,
+        "plains_water_0": 5,
+        "plains_tree_0_0": 5,
+        "plains_rock_0_0": 3,
+        "plains_bridge_0_0": 2,
+        "plains_fence_0_0": 3,
+        "plains_decoration_0_0": 2
+      },
+      "spawnableObjects": ["TREE", "SUNFLOWER", "BUSH"],
+      "spawnChances": {
+        "TREE": 0.08,
+        "SUNFLOWER": 0.05,
+        "BUSH": 0.03
+      }
     },
-    "spawnableObjects": ["TREE", "SUNFLOWER"],
-    "spawnChances": {
-      "SUNFLOWER": 0.4,
-      "TREE": 0.4
-    }
-  },
-  {
-    "name": "Forest",
-    "type": "FOREST",
-    "allowedTileTypes": [11, 12, 1, 10, 20],
-    "tileDistribution": {
-      "11": 50.0,
-      "12": 25.0,
-      "1": 15.0,
-      "10": 8.0,
-      "20": 2.0
+    {
+      "name": "Desert",
+      "type": "DESERT",
+      "weight": 0.7,
+      "allowedTileTypes": [
+        "desert_vegetation_0_0",
+        "desert_vegetation_0_1",
+        "desert_flower_0_0",
+        "desert_ground_0_0",
+        "desert_ground_1_0",
+        "desert_rock_0_0",
+        "desert_rock_1_0",
+        "desert_platform_0",
+        "desert_cactus_0_0",
+        "desert_cactus_0_1",
+        "desert_rock_small_0_0",
+        "desert_fence_0_0",
+        "desert_building_0_0",
+        "desert_window_0_0",
+        "desert_decoration_0_0",
+        "desert_awning_0_0"
+      ],
+      "tileDistribution": {
+        "desert_ground_0_0": 50,
+        "desert_vegetation_0_0": 10,
+        "desert_rock_0_0": 15,
+        "desert_cactus_0_0": 5,
+        "desert_rock_small_0_0": 5,
+        "desert_platform_0": 5,
+        "desert_building_0_0": 4,
+        "desert_decoration_0_0": 6
+      },
+      "spawnableObjects": ["CACTUS"],
+      "spawnChances": {
+        "CACTUS": 0.1
+      }
     },
-    "spawnableObjects": ["TREE"],
-    "spawnChances": {
-      "TREE": 1.5
-    }
-  },
-  {
-    "name": "Snow",
-    "type": "SNOW",
-    "allowedTileTypes": [4, 6, 1],
-    "tileDistribution": {
-      "4": 75.0,
-      "6": 20.0,
-      "1": 5.0
+    {
+      "name": "Mountain",
+      "type": "BIG_MOUNTAINS",
+      "weight": 0.4,
+      "allowedTileTypes": [
+        "mountain_grass_0_0",
+        "mountain_grass_0_1",
+        "mountain_tallgrass_0_0",
+        "mountain_rock_0_0",
+        "mountain_rock_1_0",
+        "mountain_rock_2_0",
+        "mountain_ground_0_0",
+        "mountain_ground_1_0",
+        "mountain_ground_detail_0_0",
+        "mountain_water_0_0",
+        "mountain_water_1_0",
+        "mountain_waterfall_0_0",
+        "mountain_cliff_0_0",
+        "mountain_cliff_1_0",
+        "mountain_platform_0_0",
+        "mountain_tree_0_0",
+        "mountain_decoration_0_0"
+      ],
+      "tileDistribution": {
+        "mountain_rock_0_0": 35,
+        "mountain_ground_0_0": 25,
+        "mountain_grass_0_0": 15,
+        "mountain_cliff_0_0": 10,
+        "mountain_water_0_0": 5,
+        "mountain_waterfall_0_0": 3,
+        "mountain_tree_0_0": 4,
+        "mountain_decoration_0_0": 3
+      },
+      "spawnableObjects": ["ROCK_FORMATION", "TREE"],
+      "spawnChances": {
+        "ROCK_FORMATION": 0.15,
+        "TREE": 0.05
+      }
+    }, {
+      "name": "Cherry Blossom",
+      "type": "CHERRY_BLOSSOM",
+      "weight": 0.5,
+      "allowedTileTypes": [
+        "cherry_tree_green_0_0",
+        "cherry_tree_green_1_0",
+        "cherry_tree_green_2_0",
+        "cherry_tree_pink_0_0",
+        "cherry_tree_pink_1_0",
+        "cherry_tree_pink_2_0",
+        "cherry_tree_small_0_0",
+        "cherry_tree_small_1_0",
+        "cherry_ground_detail_0_0",
+        "cherry_ground_detail_1_0",
+        "cherry_rock_0_0",
+        "cherry_rock_1_0",
+        "cherry_water_0",
+        "cherry_platform_wood_0_0",
+        "cherry_platform_wood_1_0",
+        "cherry_platform_stone_0_0",
+        "cherry_platform_stone_1_0",
+        "cherry_decoration_0_0",
+        "cherry_planter_0_0",
+        "cherry_bench_0_0"
+      ],
+      "tileDistribution": {
+        "cherry_tree_green_0_0": 15,
+        "cherry_tree_pink_0_0": 20,
+        "cherry_ground_detail_0_0": 30,
+        "cherry_rock_0_0": 5,
+        "cherry_water_0": 5,
+        "cherry_platform_wood_0_0": 10,
+        "cherry_decoration_0_0": 10,
+        "cherry_planter_0_0": 5
+      },
+      "spawnableObjects": ["CHERRY_TREE"],
+      "spawnChances": {
+        "CHERRY_TREE": 0.15
+      }
     },
-    "spawnableObjects": ["SNOW_TREE","SNOW_BALL"],
-    "spawnChances": {
-      "SNOW_TREE": 0.6
-    }
-  },
-  {
-    "name": "Haunted",
-    "type": "HAUNTED",
-    "allowedTileTypes": [5, 7, 8, 9, 1],
-    "tileDistribution": {
-      "5": 55.0,
-      "7": 25.0,
-      "8": 8.0,
-      "9": 7.0,
-      "1": 5.0
+    {
+      "name": "Haunted",
+      "type": "HAUNTED",
+      "weight": 0.4,
+      "allowedTileTypes": [
+        "haunted_mushroom_0_0",
+        "haunted_mushroom_1_0",
+        "haunted_vegetation_0_0",
+        "haunted_tree_dark_0_0",
+        "haunted_tree_dark_1_0",
+        "haunted_tree_dark_2_0",
+        "haunted_tree_dead_0_0",
+        "haunted_tree_dead_1_0",
+        "haunted_wall_stone_0_0",
+        "haunted_wall_stone_1_0",
+        "haunted_platform_0_0",
+        "haunted_platform_1_0",
+        "haunted_house_wood_0_0",
+        "haunted_house_wood_1_0",
+        "haunted_decoration_0_0"
+      ],
+      "tileDistribution": {
+        "haunted_mushroom_0_0": 10,
+        "haunted_tree_dark_0_0": 20,
+        "haunted_tree_dead_0_0": 15,
+        "haunted_wall_stone_0_0": 20,
+        "haunted_platform_0_0": 15,
+        "haunted_decoration_0_0": 5
+      },
+      "spawnableObjects": ["HAUNTED_TREE", "DEAD_TREE"],
+      "spawnChances": {
+        "HAUNTED_TREE": 0.12,
+        "DEAD_TREE": 0.08
+      }
     },
-    "spawnableObjects": ["HAUNTED_TREE", "DEAD_TREE", "SMALL_HAUNTED_TREE", "VINES"],
-    "spawnChances": {
-      "HAUNTED_TREE": 1.2,
-      "DEAD_TREE": 0.6,
-      "SMALL_HAUNTED_TREE": 0.6,
-      "VINES": 2.5
+    {
+      "name": "Snow",
+      "type": "SNOW",
+      "weight": 0.6,
+      "allowedTileTypes": [
+        "snow_tree_snowy_0_0",
+        "snow_tree_snowy_1_0",
+        "snow_tree_pine_0_0",
+        "snow_tree_pine_1_0",
+        "snow_rock_0_0",
+        "snow_rock_1_0",
+        "snow_cave_0_0",
+        "snow_cave_1_0",
+        "snow_ice_0_0",
+        "snow_ice_1_0",
+        "snow_ground_0",
+        "snow_cliff_0_0",
+        "snow_cliff_1_0",
+        "snow_decoration_0_0"
+      ],
+      "tileDistribution": {
+        "snow_ground_0": 40,
+        "snow_tree_snowy_0_0": 15,
+        "snow_tree_pine_0_0": 12,
+        "snow_rock_0_0": 10,
+        "snow_ice_0_0": 8,
+        "snow_cave_0_0": 5,
+        "snow_cliff_0_0": 8,
+        "snow_decoration_0_0": 2
+      },
+      "spawnableObjects": ["SNOW_TREE"],
+      "spawnChances": {
+        "SNOW_TREE": 0.15
+      }
+    },{
+      "name": "Safari",
+      "type": "SAFARI",
+      "weight": 0.5,
+      "allowedTileTypes": [
+        "safari_ground_grass_0",
+        "safari_ground_grass_1",
+        "safari_ground_dirt_0",
+        "safari_ground_dirt_1",
+        "safari_rock_0_0",
+        "safari_rock_0_1",
+        "safari_rock_0_2",
+        "safari_vegetation_small_0_0",
+        "safari_rock_border_0_0",
+        "safari_rock_border_0_1",
+        "safari_tree_large_0_0",
+        "safari_tree_large_0_1",
+        "safari_vegetation_dense_0_0",
+        "safari_decoration_0_0"
+      ],
+      "tileDistribution": {
+        "safari_ground_grass_0": 25,
+        "safari_ground_dirt_0": 20,
+        "safari_rock_0_0": 10,
+        "safari_vegetation_small_0_0": 10,
+        "safari_tree_large_0_0": 12,
+        "safari_vegetation_dense_0_0": 8,
+        "safari_fence_0_0": 3,
+        "safari_fountain_0_0": 3
+      },
+      "spawnableObjects": ["TREE", "BUSH"],
+      "spawnChances": {
+        "TREE": 0.15,
+        "BUSH": 0.10
+      },
+      "environmentEffects": {
+        "particleEffect": "DUST",
+        "ambientSound": "SAFARI_AMBIENT",
+        "weatherChance": 0.3
+      }
+    },{
+      "name": "Swamp",
+      "type": "SWAMP",
+      "weight": 0.4,
+      "allowedTileTypes": [
+        "swamp_tree_mangrove_0_0",
+        "swamp_tree_mangrove_0_1",
+        "swamp_tree_mangrove_1_0",
+        "swamp_roots_0_0",
+        "swamp_roots_0_1",
+        "swamp_roots_1_0",
+        "swamp_ground_green_0_0",
+        "swamp_ground_green_0_1",
+        "swamp_ground_brown_0_0",
+        "swamp_ground_brown_0_1",
+        "swamp_ground_water_0_0",
+        "swamp_ground_water_0_1",
+        "swamp_platform_0_0",
+        "swamp_platform_0_1",
+        "swamp_platform_1_0",
+        "swamp_vegetation_0_0",
+        "swamp_vegetation_0_1",
+        "swamp_vegetation_1_0"
+      ],
+      "tileDistribution": {
+        "swamp_ground_water_0_0": 25,
+        "swamp_ground_green_0_0": 20,
+        "swamp_ground_brown_0_0": 15,
+        "swamp_tree_mangrove_0_0": 12,
+        "swamp_roots_0_0": 10,
+        "swamp_platform_0_0": 8,
+        "swamp_vegetation_0_0": 10
+      },
+      "spawnableObjects": ["MANGROVE", "MUSHROOM", "VEGETATION"],
+      "spawnChances": {
+        "MANGROVE": 0.15,
+        "MUSHROOM": 0.08,
+        "VEGETATION": 0.12
+      },
+      "environmentEffects": {
+        "particleEffect": "FOG",
+        "ambientSound": "SWAMP_AMBIENT",
+        "weatherChance": 0.7
+      },
+      "transitionMapping": {
+        "PLAINS": {
+          "width": 0.3,
+          "blend": "gradual"
+        },
+        "FOREST": {
+          "width": 0.4,
+          "blend": "smooth"
+        },
+        "HAUNTED": {
+          "width": 0.5,
+          "blend": "sharp"
+        }
+      }
+    },{
+      "name": "Forest",
+      "type": "FOREST",
+      "weight": 0.8,
+      "allowedTileTypes": [
+        "forest_flower_0_0",
+        "forest_flower_0_1",
+        "forest_flower_0_2",
+        "forest_vegetation_small_0_0",
+        "forest_vegetation_small_0_1",
+        "forest_flower_tall_0_0",
+        "forest_flower_tall_0_1",
+        "forest_flower_tall_0_2",
+        "forest_flower_tall_1_0",
+        "forest_flower_tall_1_1",
+        "forest_ground_0_0",
+        "forest_ground_0_1",
+        "forest_ground_decorated_0_0",
+        "forest_ground_decorated_0_1",
+        "forest_tree_large_0_0",
+        "forest_tree_large_0_1",
+        "forest_tree_large_1_0",
+        "forest_tree_large_1_1"
+      ],
+      "tileDistribution": {
+        "forest_ground_0_0": 25,
+        "forest_ground_decorated_0_0": 15,
+        "forest_tree_large_0_0": 20,
+        "forest_flower_0_0": 10,
+        "forest_vegetation_small_0_0": 10,
+        "forest_flower_tall_0_0": 20
+      },
+      "spawnableObjects": ["TREE", "BUSH", "FLOWER"],
+      "spawnChances": {
+        "TREE": 0.2,
+        "BUSH": 0.15,
+        "FLOWER": 0.1
+      },
+      "environmentEffects": {
+        "particleEffect": "LEAVES",
+        "ambientSound": "FOREST_AMBIENT",
+        "weatherChance": 0.4
+      },
+      "transitionMapping": {
+        "PLAINS": {
+          "width": 0.3,
+          "blend": "smooth"
+        },
+        "SWAMP": {
+          "width": 0.4,
+          "blend": "gradual"
+        },
+        "HAUNTED": {
+          "width": 0.3,
+          "blend": "sharp"
+        }
+      }
+    },{
+      "name": "Volcano",
+      "type": "VOLCANO",
+      "weight": 0.3,
+      "allowedTileTypes": [
+        "volcano_rock_formation_0_0",
+        "volcano_rock_formation_1_0",
+        "volcano_rock_formation_2_0",
+        "volcano_rock_small_0_0",
+        "volcano_rock_small_0_1",
+        "volcano_lava_pool_0_0",
+        "volcano_lava_pool_0_1",
+        "volcano_rock_edge_0_0",
+        "volcano_lava_flow_0_0",
+        "volcano_ground_0_0",
+        "volcano_ground_1_0",
+        "volcano_bridge_0_0",
+        "volcano_bridge_0_1"
+      ],
+      "tileDistribution": {
+        "volcano_rock_formation_0_0": 20,
+        "volcano_rock_small_0_0": 15,
+        "volcano_lava_pool_0_0": 15,
+        "volcano_rock_edge_0_0": 10,
+        "volcano_lava_flow_0_0": 15,
+        "volcano_ground_0_0": 20,
+        "volcano_bridge_0_0": 5
+      },
+      "spawnableObjects": ["LAVA_VENT", "ROCK_FORMATION"],
+      "spawnChances": {
+        "LAVA_VENT": 0.15,
+        "ROCK_FORMATION": 0.10
+      },
+      "environmentEffects": {
+        "particleEffect": "LAVA_PARTICLES",
+        "ambientSound": "VOLCANO_AMBIENT",
+        "weatherChance": 0.8
+      }
     }
-  },
-  {
-    "name": "Rain Forest",
-    "type": "RAIN_FOREST",
-    "allowedTileTypes": [13, 14, 1, 20, 10, 21, 24],
-    "tileDistribution": {
-      "13": 45.0,
-      "14": 30.0,
-      "1": 10.0,
-      "20": 5.0,
-      "10": 5.0,
-      "21": 3.0,
-      "24": 2.0
-    },
-    "spawnableObjects": ["RAIN_TREE", "BUSH"],
-    "spawnChances": {
-      "RAIN_TREE": 0.4,
-      "BUSH": 0.2
-    }
-  },
-  {
-    "name": "Desert",
-    "type": "DESERT",
-    "allowedTileTypes": [15, 16, 17, 2],
-    "tileDistribution": {
-      "15": 65.0,
-      "16": 20.0,
-      "17": 10.0,
-      "2": 5.0
-    },
-    "spawnableObjects": ["CACTUS", "DEAD_TREE"],
-    "spawnChances": {
-      "CACTUS": 0.5,
-      "DEAD_TREE": 0.3
-    }
-  },
-  {
-    "name": "Big Mountains",
-    "type": "BIG_MOUNTAINS",
-    "allowedTileTypes": [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 47, 48, 49, 50],
-    "tileDistribution": {
-      "25": 30.0,
-      "26": 15.0,
-      "27": 5.0,
-      "28": 5.0,
-      "29": 10.0,
-      "30": 5.0,
-      "33": 3.0,
-      "34": 3.0,
-      "35": 3.0,
-      "36": 3.0,
-      "37": 3.0,
-      "38": 3.0,
-      "40": 5.0,
-      "47": 2.0,
-      "48": 2.0,
-      "49": 2.0,
-      "50": 1.0
-    },
-    "spawnableObjects": ["SNOW_BALL"],
-    "spawnChances": {
-      "SNOW_BALL": 0.4
-    }
-  }
-]
+  ]
+}
