--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,6 +22,7 @@ dependencies {
   api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
   api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
+  api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
   implementation 'com.h2database:h2:2.1.214'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.mongodb:mongodb-driver-sync:4.11.1' // If using MongoDB
