--- a/android/Data/biomes.json
+++ b/android/Data/biomes.json
@@ -2,308 +2,134 @@
   {
     "name": "Plains",
     "type": "PLAINS",
-    "allowedTileTypes": [
-      1,
-      10,
-      18,
-      19,
-      20,
-      21,
-      22,
-      23,
-      24
-    ],
+    "allowedTileTypes": [1, 10, 18, 19, 20, 21, 22, 23, 24],
     "tileDistribution": {
-      "1": 35.0,
-      "10": 15.0,
-      "19": 8.0,
-      "20": 12.0,
-      "21": 10.0,
-      "22": 10.0,
-      "23": 5.0,
-      "24": 5.0
+      "1": 60.0,
+      "10": 20.0,
+      "18": 3.0,
+      "19": 3.0,
+      "20": 4.0,
+      "21": 4.0,
+      "22": 3.0,
+      "23": 2.0,
+      "24": 1.0
     },
-    "spawnableObjects": [
-      "TREE",
-      "SUNFLOWER"
-    ],
+    "spawnableObjects": ["TREE", "SUNFLOWER"],
     "spawnChances": {
-      "1": 0.12,
-      "10": 0.05
-    },
-    "transitionTiles": {
-      "SNOW": {
-        "1": 4,
-        "10": 6
-      },
-      "HAUNTED": {
-        "1": 5,
-        "10": 7
-      },
-      "FOREST": {
-        "1": 11,
-        "10": 12
-      },
-      "RAIN_FOREST": {
-        "1": 13,
-        "10": 14
-      },
-      "DESERT": {
-        "1": 15,
-        "10": 16
-      }
+      "SUNFLOWER": 0.4,
+      "TREE": 0.4
     }
   },
   {
     "name": "Forest",
     "type": "FOREST",
-    "allowedTileTypes": [
-      11,
-      12
-    ],
+    "allowedTileTypes": [11, 12, 1, 10, 20],
     "tileDistribution": {
-      "11": 60.0,
-      "12": 40.0
+      "11": 50.0,
+      "12": 25.0,
+      "1": 15.0,
+      "10": 8.0,
+      "20": 2.0
     },
-    "spawnableObjects": [
-      "TREE"
-    ],
+    "spawnableObjects": ["TREE"],
     "spawnChances": {
-      "11": 0.25,
-      "12": 0.15
-    },
-    "transitionTiles": {
-      "PLAINS": {
-        "11": 1,
-        "12": 10
-      },
-      "HAUNTED": {
-        "11": 5,
-        "12": 7
-      },
-      "SNOW": {
-        "11": 4,
-        "12": 6
-      },
-      "RAIN_FOREST": {
-        "11": 13,
-        "12": 14
-      },
-      "DESERT": {
-        "11": 15,
-        "12": 16
-      }
+      "TREE": 1.5
     }
   },
   {
     "name": "Snow",
     "type": "SNOW",
-    "allowedTileTypes": [
-      4,
-      6
-    ],
+    "allowedTileTypes": [4, 6, 1],
     "tileDistribution": {
-      "4": 65.0,
-      "6": 35.0
+      "4": 75.0,
+      "6": 20.0,
+      "1": 5.0
     },
-    "spawnableObjects": [
-      "SNOW_TREE"
-    ],
+    "spawnableObjects": ["SNOW_TREE","SNOW_BALL"],
     "spawnChances": {
-      "4": 0.12,
-      "6": 0.06
-    },
-    "transitionTiles": {
-      "PLAINS": {
-        "4": 1,
-        "6": 10
-      },
-      "FOREST": {
-        "4": 11,
-        "6": 12
-      },
-      "HAUNTED": {
-        "4": 5,
-        "6": 7
-      },
-      "RAIN_FOREST": {
-        "4": 13,
-        "6": 14
-      },
-      "DESERT": {
-        "4": 15,
-        "6": 16
-      }
+      "SNOW_TREE": 0.6
     }
   },
   {
     "name": "Haunted",
     "type": "HAUNTED",
-    "allowedTileTypes": [
-      5,
-      7,
-      8,
-      9
-    ],
+    "allowedTileTypes": [5, 7, 8, 9, 1],
     "tileDistribution": {
-      "5": 50.0,
+      "5": 55.0,
       "7": 25.0,
-      "8": 12.5,
-      "9": 12.5
+      "8": 8.0,
+      "9": 7.0,
+      "1": 5.0
     },
-    "spawnableObjects": [
-      "HAUNTED_TREE"
-    ],
+    "spawnableObjects": ["HAUNTED_TREE", "DEAD_TREE", "SMALL_HAUNTED_TREE", "VINES"],
     "spawnChances": {
-      "5": 0.08,
-      "7": 0.08,
-      "8": 0.02,
-      "9": 0.03
-    },
-    "transitionTiles": {
-      "PLAINS": {
-        "5": 1,
-        "7": 10,
-        "8": 10,
-        "9": 10
-      },
-      "FOREST": {
-        "5": 11,
-        "7": 12,
-        "8": 12,
-        "9": 12
-      },
-      "SNOW": {
-        "5": 4,
-        "7": 6,
-        "8": 6,
-        "9": 6
-      },
-      "RAIN_FOREST": {
-        "5": 13,
-        "7": 14,
-        "8": 14,
-        "9": 14
-      },
-      "DESERT": {
-        "5": 15,
-        "7": 16,
-        "8": 16,
-        "9": 16
-      }
+      "HAUNTED_TREE": 1.2,
+      "DEAD_TREE": 0.6,
+      "SMALL_HAUNTED_TREE": 0.6,
+      "VINES": 2.5
     }
   },
   {
-    "name": "Rainforest",
+    "name": "Rain Forest",
     "type": "RAIN_FOREST",
-    "allowedTileTypes": [
-      13,
-      14
-    ],
+    "allowedTileTypes": [13, 14, 1, 20, 10, 21, 24],
     "tileDistribution": {
-      "13": 60.0,
-      "14": 40.0
+      "13": 45.0,
+      "14": 30.0,
+      "1": 10.0,
+      "20": 5.0,
+      "10": 5.0,
+      "21": 3.0,
+      "24": 2.0
     },
-    "spawnableObjects": [
-      "TREE"
-    ],
+    "spawnableObjects": ["RAIN_TREE", "BUSH"],
     "spawnChances": {
-      "13": 0.20,
-      "14": 0.08
-    },
-    "transitionTiles": {
-      "FOREST": {
-        "13": 11,
-        "14": 12
-      },
-      "PLAINS": {
-        "13": 1,
-        "14": 10
-      },
-      "DESERT": {
-        "13": 15,
-        "14": 16
-      },
-      "SNOW": {
-        "13": 4,
-        "14": 6
-      }
+      "RAIN_TREE": 0.4,
+      "BUSH": 0.2
     }
   },
   {
     "name": "Desert",
     "type": "DESERT",
-    "allowedTileTypes": [
-      15,
-      16,
-      17
-    ],
+    "allowedTileTypes": [15, 16, 17, 2],
     "tileDistribution": {
-      "15": 55.0,
+      "15": 65.0,
       "16": 20.0,
-      "17": 25.0
+      "17": 10.0,
+      "2": 5.0
     },
-    "spawnableObjects": [
-      "CACTUS"
-    ],
+    "spawnableObjects": ["CACTUS", "DEAD_TREE"],
     "spawnChances": {
-      "15": 0.15,
-      "16": 0.04,
-      "17": 0.08
-    },
-    "transitionTiles": {
-      "PLAINS": {
-        "15": 1,
-        "16": 10,
-        "17": 1
-      },
-      "FOREST": {
-        "15": 11,
-        "16": 12,
-        "17": 11
-      },
-      "RAIN_FOREST": {
-        "15": 13,
-        "16": 14,
-        "17": 13
-      },
-      "SNOW": {
-        "15": 4,
-        "16": 6,
-        "17": 4
-      }
+      "CACTUS": 0.5,
+      "DEAD_TREE": 0.3
     }
   },
   {
     "name": "Big Mountains",
     "type": "BIG_MOUNTAINS",
-    "allowedTileTypes": [
-      1,
-      2,
-      3,
-      4
-    ],
+    "allowedTileTypes": [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 47, 48, 49, 50],
     "tileDistribution": {
-      "1": 40.0,
-      "2": 30.0,
-      "3": 20.0,
-      "4": 10.0
+      "25": 30.0,
+      "26": 15.0,
+      "27": 5.0,
+      "28": 5.0,
+      "29": 10.0,
+      "30": 5.0,
+      "33": 3.0,
+      "34": 3.0,
+      "35": 3.0,
+      "36": 3.0,
+      "37": 3.0,
+      "38": 3.0,
+      "40": 5.0,
+      "47": 2.0,
+      "48": 2.0,
+      "49": 2.0,
+      "50": 1.0
     },
-    "spawnableObjects": [
-      "TREE"
-    ],
+    "spawnableObjects": ["SNOW_BALL"],
     "spawnChances": {
-      "1": 0.05
-    },
-    "transitionTiles": {
-      "PLAINS": {
-        "1": 1,
-        "2": 2
-      },
-      "SNOW": {
-        "1": 4,
-        "2": 4
-      }
+      "SNOW_BALL": 0.4
     }
   }
 ]
