--- a/data/biomes.json
+++ b/data/biomes.json
@@ -1,378 +1,135 @@
-{
-  "biomes": [
-    {
-      "name": "Plains",
-      "type": "PLAINS",
-      "weight": 1.0,
-      "allowedTileTypes": [
-        "plains_grass",
-        "plains_flowers",
-        "plains_ground",
-        "plains_water",
-        "plains_tree",
-        "plains_rock",
-        "plains_bridge",
-        "plains_fence",
-        "plains_decoration"
-      ],
-      "tileDistribution": {
-        "plains_grass": 45.0,
-        "plains_flowers": 15.0,
-        "plains_ground": 20.0,
-        "plains_water": 5.0,
-        "plains_tree": 5.0,
-        "plains_rock": 3.0,
-        "plains_bridge": 2.0,
-        "plains_fence": 3.0,
-        "plains_decoration": 2.0
-      },
-      "spawnableObjects": [
-        "TREE",
-        "SUNFLOWER",
-        "BUSH",
-        "TALL_GRASS",
-        "FLOWER"
-      ],
-      "spawnChances": {
-        "TREE": 0.08,
-        "SUNFLOWER": 0.05,
-        "BUSH": 0.03,
-        "TALL_GRASS": 0.15,
-        "FLOWER": 0.1
-      },
-      "transitionMapping": {
-        "FOREST": {
-          "plains_grass": "forest_ground",
-          "plains_ground": "forest_ground_decorated"
-        },
-        "DESERT": {
-          "plains_grass": "desert_ground",
-          "plains_water": "desert_ground"
-        }
-      }
+[
+  {
+    "name": "Plains",
+    "type": "PLAINS",
+    "allowedTileTypes": [1, 10, 18, 19, 20, 21, 22, 23, 24],
+    "tileDistribution": {
+      "1": 60.0,
+      "10": 20.0,
+      "18": 3.0,
+      "19": 3.0,
+      "20": 4.0,
+      "21": 4.0,
+      "22": 3.0,
+      "23": 2.0,
+      "24": 1.0
     },
-    {
-      "name": "Desert",
-      "type": "DESERT",
-      "weight": 0.7,
-      "allowedTileTypes": [
-        "desert_vegetation",
-        "desert_flower",
-        "desert_ground",
-        "desert_rock",
-        "desert_platform",
-        "desert_cactus",
-        "desert_rock_small",
-        "desert_fence",
-        "desert_building",
-        "desert_window",
-        "desert_decoration",
-        "desert_awning"
-      ],
-      "tileDistribution": {
-        "desert_ground": 50.0,
-        "desert_vegetation": 10.0,
-        "desert_rock": 15.0,
-        "desert_cactus": 5.0,
-        "desert_rock_small": 5.0,
-        "desert_platform": 5.0,
-        "desert_building": 4.0,
-        "desert_decoration": 6.0
-      },
-      "spawnableObjects": [
-        "CACTUS",
-        "DEAD_BUSH",
-        "ROCK_FORMATION",
-        "DESERT_GRASS"
-      ],
-      "spawnChances": {
-        "CACTUS": 0.1,
-        "DEAD_BUSH": 0.05,
-        "ROCK_FORMATION": 0.08,
-        "DESERT_GRASS": 0.03
-      }
-    },
-    {
-      "name": "Cherry Blossom",
-      "type": "CHERRY_BLOSSOM",
-      "weight": 0.5,
-      "allowedTileTypes": [
-        "cherry_tree_green",
-        "cherry_tree_pink",
-        "cherry_tree_small",
-        "cherry_ground_detail",
-        "cherry_rock",
-        "cherry_water",
-        "cherry_platform_wood",
-        "cherry_platform_stone",
-        "cherry_decoration",
-        "cherry_planter",
-        "cherry_bench"
-      ],
-      "tileDistribution": {
-        "cherry_tree_green": 15.0,
-        "cherry_tree_pink": 20.0,
-        "cherry_ground_detail": 30.0,
-        "cherry_rock": 5.0,
-        "cherry_water": 5.0,
-        "cherry_platform_wood": 10.0,
-        "cherry_decoration": 10.0,
-        "cherry_planter": 5.0
-      },
-      "spawnableObjects": [
-        "CHERRY_TREE",
-        "LANTERN",
-        "BENCH",
-        "FLOWER_PATCH"
-      ],
-      "spawnChances": {
-        "CHERRY_TREE": 0.15,
-        "LANTERN": 0.08,
-        "BENCH": 0.05,
-        "FLOWER_PATCH": 0.1
-      }
-    },
-    {
-      "name": "Mountain",
-      "type": "BIG_MOUNTAINS",
-      "weight": 0.4,
-      "allowedTileTypes": [
-        "mountain_grass",
-        "mountain_tallgrass",
-        "mountain_rock",
-        "mountain_ground",
-        "mountain_ground_detail",
-        "mountain_water",
-        "mountain_waterfall",
-        "mountain_cliff",
-        "mountain_platform",
-        "mountain_tree",
-        "mountain_decoration"
-      ],
-      "tileDistribution": {
-        "mountain_rock": 35.0,
-        "mountain_ground": 25.0,
-        "mountain_grass": 15.0,
-        "mountain_cliff": 10.0,
-        "mountain_water": 5.0,
-        "mountain_waterfall": 3.0,
-        "mountain_tree": 4.0,
-        "mountain_decoration": 3.0
-      },
-      "spawnableObjects": [
-        "ROCK_FORMATION",
-        "MOUNTAIN_TREE",
-        "WATERFALL",
-        "MOUNTAIN_FLOWER"
-      ],
-      "spawnChances": {
-        "ROCK_FORMATION": 0.2,
-        "MOUNTAIN_TREE": 0.08,
-        "WATERFALL": 0.05,
-        "MOUNTAIN_FLOWER": 0.1
-      }
-    },
-    {
-      "name": "Haunted",
-      "type": "HAUNTED",
-      "weight": 0.4,
-      "allowedTileTypes": [
-        "haunted_ground",
-        "haunted_path",
-        "haunted_tree",
-        "haunted_rock",
-        "haunted_water",
-        "haunted_mushroom",
-        "haunted_fence",
-        "haunted_grave",
-        "haunted_fog",
-        "haunted_decoration"
-      ],
-      "tileDistribution": {
-        "haunted_ground": 40.0,
-        "haunted_path": 15.0,
-        "haunted_tree": 15.0,
-        "haunted_rock": 8.0,
-        "haunted_water": 5.0,
-        "haunted_mushroom": 7.0,
-        "haunted_fence": 4.0,
-        "haunted_grave": 3.0,
-        "haunted_fog": 2.0,
-        "haunted_decoration": 1.0
-      },
-      "spawnableObjects": [
-        "HAUNTED_TREE",
-        "HAUNTED_SHROOM",
-        "HAUNTED_SHROOMS",
-        "SMALL_HAUNTED_TREE",
-        "GRAVESTONE",
-        "FOG_EMITTER"
-      ],
-      "spawnChances": {
-        "HAUNTED_TREE": 0.12,
-        "HAUNTED_SHROOM": 0.08,
-        "HAUNTED_SHROOMS": 0.05,
-        "SMALL_HAUNTED_TREE": 0.1,
-        "GRAVESTONE": 0.06,
-        "FOG_EMITTER": 0.03
-      }
-    },
-    {
-      "name": "Swamp",
-      "type": "SWAMP",
-      "weight": 0.5,
-      "allowedTileTypes": [
-        "swamp_tree_mangrove",
-        "swamp_roots",
-        "swamp_ground_green",
-        "swamp_ground_brown",
-        "swamp_ground_water",
-        "swamp_platform",
-        "swamp_vegetation",
-        "swamp_mushroom",
-        "swamp_lily",
-        "swamp_decoration"
-      ],
-      "tileDistribution": {
-        "swamp_ground_green": 25.0,
-        "swamp_ground_brown": 20.0,
-        "swamp_ground_water": 15.0,
-        "swamp_tree_mangrove": 12.0,
-        "swamp_roots": 10.0,
-        "swamp_vegetation": 8.0,
-        "swamp_platform": 5.0,
-        "swamp_mushroom": 3.0,
-        "swamp_lily": 1.0,
-        "swamp_decoration": 1.0
-      },
-      "spawnableObjects": [
-        "MANGROVE_TREE",
-        "LILY_PAD",
-        "MUSHROOM_CLUSTER",
-        "SWAMP_GRASS",
-        "VINE"
-      ],
-      "spawnChances": {
-        "MANGROVE_TREE": 0.15,
-        "LILY_PAD": 0.12,
-        "MUSHROOM_CLUSTER": 0.08,
-        "SWAMP_GRASS": 0.2,
-        "VINE": 0.1
-      }
-    },
-    {
-      "name": "Safari",
-      "type": "SAFARI",
-      "weight": 0.6,
-      "allowedTileTypes": [
-        "safari_grass",
-        "safari_ground",
-        "safari_rock",
-        "safari_tree",
-        "safari_building",
-        "safari_fence",
-        "safari_decoration"
-      ],
-      "tileDistribution": {
-        "safari_grass": 35.0,
-        "safari_ground": 30.0,
-        "safari_rock": 15.0,
-        "safari_tree": 10.0,
-        "safari_building": 5.0,
-        "safari_fence": 3.0,
-        "safari_decoration": 2.0
-      },
-      "spawnableObjects": [
-        "SAFARI_TREE",
-        "TALL_GRASS",
-        "ROCK_FORMATION",
-        "ACACIA_TREE",
-        "OBSERVATION_POST"
-      ],
-      "spawnChances": {
-        "SAFARI_TREE": 0.12,
-        "TALL_GRASS": 0.25,
-        "ROCK_FORMATION": 0.08,
-        "ACACIA_TREE": 0.1,
-        "OBSERVATION_POST": 0.03
-      }
-    },
-    {
-      "name": "Snow",
-      "type": "SNOW",
-      "weight": 0.6,
-      "allowedTileTypes": [
-        "snow_tree_snowy",
-        "snow_tree_pine",
-        "snow_rock",
-        "snow_cave",
-        "snow_ice",
-        "snow_ground",
-        "snow_cliff",
-        "snow_decoration"
-      ],
-      "tileDistribution": {
-        "snow_ground": 40.0,
-        "snow_tree_snowy": 15.0,
-        "snow_tree_pine": 12.0,
-        "snow_rock": 10.0,
-        "snow_ice": 8.0,
-        "snow_cave": 5.0,
-        "snow_cliff": 8.0,
-        "snow_decoration": 2.0
-      },
-      "spawnableObjects": [
-        "SNOW_TREE",
-        "PINE_TREE",
-        "ICE_FORMATION",
-        "SNOW_ROCK",
-        "SNOWMAN"
-      ],
-      "spawnChances": {
-        "SNOW_TREE": 0.15,
-        "PINE_TREE": 0.12,
-        "ICE_FORMATION": 0.08,
-        "SNOW_ROCK": 0.1,
-        "SNOWMAN": 0.02
-      },
-      "transitionMapping": {
-        "BIG_MOUNTAINS": {
-          "snow_ground": "mountain_ground",
-          "snow_rock": "mountain_rock"
-        },
-        "PLAINS": {
-          "snow_ground": "plains_ground",
-          "snow_tree_snowy": "plains_tree"
-        }
-      },
-      "globalSettings": {
-        "transitionWidth": 0.2,
-        "mountainThreshold": 0.85,
-        "biomeScale": 0.008,
-        "detailScale": 0.01,
-        "warpScale": 0.002,
-        "biomeOctaves": 4,
-        "biomePersistence": 0.45,
-        "environmentEffects": {
-          "SNOW": {
-            "particleEffect": "SNOW_FALL",
-            "ambientSound": "WINTER_WIND",
-            "weatherChance": 0.4
-          },
-          "HAUNTED": {
-            "particleEffect": "FOG",
-            "ambientSound": "SPOOKY_AMBIENT",
-            "weatherChance": 0.7
-          },
-          "SWAMP": {
-            "particleEffect": "FIREFLY",
-            "ambientSound": "SWAMP_AMBIENT",
-            "weatherChance": 0.3
-          }
-        }
-      }
+    "spawnableObjects": ["TREE", "SUNFLOWER"],
+    "spawnChances": {
+      "SUNFLOWER": 0.4,
+      "TREE": 0.4
     }
-  ]
-}
-
-
+  },
+  {
+    "name": "Forest",
+    "type": "FOREST",
+    "allowedTileTypes": [11, 12, 1, 10, 20],
+    "tileDistribution": {
+      "11": 50.0,
+      "12": 25.0,
+      "1": 15.0,
+      "10": 8.0,
+      "20": 2.0
+    },
+    "spawnableObjects": ["TREE"],
+    "spawnChances": {
+      "TREE": 1.5
+    }
+  },
+  {
+    "name": "Snow",
+    "type": "SNOW",
+    "allowedTileTypes": [4, 6, 1],
+    "tileDistribution": {
+      "4": 75.0,
+      "6": 20.0,
+      "1": 5.0
+    },
+    "spawnableObjects": ["SNOW_TREE","SNOW_BALL"],
+    "spawnChances": {
+      "SNOW_TREE": 0.6
+    }
+  },
+  {
+    "name": "Haunted",
+    "type": "HAUNTED",
+    "allowedTileTypes": [5, 7, 8, 9, 1],
+    "tileDistribution": {
+      "5": 55.0,
+      "7": 25.0,
+      "8": 8.0,
+      "9": 7.0,
+      "1": 5.0
+    },
+    "spawnableObjects": ["HAUNTED_TREE", "DEAD_TREE", "SMALL_HAUNTED_TREE", "VINES"],
+    "spawnChances": {
+      "HAUNTED_TREE": 1.2,
+      "DEAD_TREE": 0.6,
+      "SMALL_HAUNTED_TREE": 0.6,
+      "VINES": 2.5
+    }
+  },
+  {
+    "name": "Rain Forest",
+    "type": "RAIN_FOREST",
+    "allowedTileTypes": [13, 14, 1, 20, 10, 21, 24],
+    "tileDistribution": {
+      "13": 45.0,
+      "14": 30.0,
+      "1": 10.0,
+      "20": 5.0,
+      "10": 5.0,
+      "21": 3.0,
+      "24": 2.0
+    },
+    "spawnableObjects": ["RAIN_TREE", "BUSH"],
+    "spawnChances": {
+      "RAIN_TREE": 0.4,
+      "BUSH": 0.2
+    }
+  },
+  {
+    "name": "Desert",
+    "type": "DESERT",
+    "allowedTileTypes": [15, 16, 17, 2],
+    "tileDistribution": {
+      "15": 65.0,
+      "16": 20.0,
+      "17": 10.0,
+      "2": 5.0
+    },
+    "spawnableObjects": ["CACTUS", "DEAD_TREE"],
+    "spawnChances": {
+      "CACTUS": 0.5,
+      "DEAD_TREE": 0.3
+    }
+  },
+  {
+    "name": "Big Mountains",
+    "type": "BIG_MOUNTAINS",
+    "allowedTileTypes": [25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 47, 48, 49, 50],
+    "tileDistribution": {
+      "25": 30.0,
+      "26": 15.0,
+      "27": 5.0,
+      "28": 5.0,
+      "29": 10.0,
+      "30": 5.0,
+      "33": 3.0,
+      "34": 3.0,
+      "35": 3.0,
+      "36": 3.0,
+      "37": 3.0,
+      "38": 3.0,
+      "40": 5.0,
+      "47": 2.0,
+      "48": 2.0,
+      "49": 2.0,
+      "50": 1.0
+    },
+    "spawnableObjects": ["SNOW_BALL"],
+    "spawnChances": {
+      "SNOW_BALL": 0.4
+    }
+  }
+]
